Fixes Cards Overflow

--- a/sass/styles/elements/elements.card.mentors.scss
+++ b/sass/styles/elements/elements.card.mentors.scss
@@ -7,12 +7,13 @@
 }
 .card-mentor {
    padding-bottom: 10px;
+   max-height: 67px;
 }
 
 .card-mentor-image {
   display: inline-block;
-  top: -15px;
   position: relative;
+  min-width: 51.53px;
 }
 @for $i from 0 through 2 {
   .card-mentors:nth-child(#{$i+1}) {
@@ -31,6 +32,8 @@
 
 .card-mentor-name {
   margin-top: 7.5px;
+  max-height: 35px;
+  overflow: hidden;
 }
 
 .card-mentor-divider {
