--- a/sass/styles/generic/reset.scss
+++ b/sass/styles/generic/reset.scss
@@ -4,7 +4,9 @@
 // Print styles.
 // Inlined to avoid the additional HTTP request: h5bp.com/r
 // ==========================================================================
-
+body {
+  @include font('Effra', 27.6px, normal);
+}
 @media print {
   *,
   *:before,
